# ddr-md

./: .gitignore  .gitmodules  CLAUDE.md  README.md  app.json  bun.lockb  package-lock.json  package.json  plan.md  pubspec.yaml
android/app/: build.gradle  build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/bpm_clicker/: MainActivity.kt
android/app/src/main/kotlin/com/shiggy/ddr_md/: MainActivity.kt
app/: _layout.tsx
app/(tabs)/: index.tsx
assets/: 50th.json  888.json  888_2.json  aceforaces.json  chaosterror.json  max300supermaxme.json  ocr_config.txt  songlist.json
components/: Card.tsx  ThemeSwitch.tsx
constants/: Constants.ts
docs/: ddr-world-speed.md  noteskin.md  paddleocr-migration.md  plan-japanese-detection.md  plan-paddle-det-integration.md  plan-paddle-v6-migration.md
docs/parity/: ANALYSIS.md  LANDPADDLE-SIGNALS.md
integration_test/: tick_clock_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
ios/Runner/Assets.xcassets/LaunchImage.imageset/: Contents.json
ios/Runner/Base.lproj/: Main.storyboard
lib/: constants.dart  grades.dart  helpers.dart  main.dart  native_ocr_ffi.dart  navigation_bar.dart  ocr_config.dart  ocr_processor.dart  types.ts
lib/components/: bpm.dart  bpm_page.dart  roi_overlay.dart  roi_painter.dart  song.dart  songJson.dart  song_json.dart
lib/components/ocr/: load_image.dart  ocr_page.dart  ocr_shared.dart  roi_smoother.dart  save_score.dart
lib/components/settings/: setting_card.dart  settings_page.dart
lib/components/song/: chart.dart  chartData.dart  history_page.dart  note.dart  note_page.dart  prevNote.dart  prev_note.dart  song.dart  song_bpm.dart  song_chart.dart  song_details.dart  song_diff_picker.dart  song_difficulties.dart  song_difficulty_picker.dart  song_page.dart
lib/components/song/notes/: chart_preview_page.dart  chart_scroller.dart  new_note.dart  note_card.dart  note_page.dart  noteskin.dart  prev_note.dart  tick_clock.dart
lib/components/song/scores/: score_card.dart  score_details_page.dart  score_page.dart
lib/components/songlist/: difficultylist_page.dart  difflist_page.dart  favlist_page.dart  songlist_item.dart  songlist_page.dart  sort_menu_button.dart
lib/models/: bpm_model.dart  database.dart  db_models.dart  navigation_model.dart  parity.dart  score_images.dart  settings_model.dart  song_model.dart  steps_model.dart
linux/: CMakeLists.txt  my_application.cc
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native_opencv/: README.md  pubspec.yaml
native_opencv/android/: .gitignore  CMakeLists.txt  build.gradle
native_opencv/android/src/main/: AndroidManifest.xml
native_opencv/android/src/main/java/com/example/native_opencv/: NativeOpencvPlugin.java
native_opencv/ios/: .gitignore  native_opencv.podspec
native_opencv/ios/Classes/: CameraOcrSession.h  CameraOcrSession.mm  NativeOpencvPlugin.h  SwiftNativeOpencvPlugin.swift  camera_ocr_session.cpp  camera_ocr_session.h  camera_result.h  config_marshal.h  ddrocr_instance.cpp  ddrocr_instance.h  details_detector.cpp  details_detector.h  details_tracker.cpp  details_tracker.h  jni_bridge.cpp  native_opencv.cpp  ocr_android.cpp  ocr_ios.mm  ocr_onnx.cpp  ocr_tesseract.cpp  ocr_wrapper.h
native_opencv/tools/model_compare/: CMakeLists.txt  index.html  main.cpp  perf_viewer.html  results.csv  results_viewer.html
plans/: plan-ios-to-tess.md  plan-tess-optimisation.md
scripts/: build_lite.sh  build_tesseract_ios.sh  generate_songlist.sh  init.sh  init_windows.ps1  roi_picker.html
scripts/ios_tesseract_cmake/: CMakeLists.txt
stores/: global.ts
test/: chart_scroller_constant_test.dart  chart_scroller_playback_test.dart  chart_scroller_timing_test.dart  grades_test.dart  parity_test.dart  resolve_ocr_difficulty_test.dart  resolve_ocr_flare_test.dart  save_score_panel_test.dart  score_card_test.dart  score_details_page_test.dart  song_radar_chart_test.dart  widget_test.dart
web/: index.html  manifest.json
wiki/: Release 1.md
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
